crates/api-snowflake-rest/src/tests/snapshots/compatible/alter_table_schema_missing.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_api.rs
description: "SQL #1 [spent: 624/624ms]: ALTER TABLE embucket.missing_schema.test ADD COLUMN new_col INT\nQuery UUID: 91455add-5a7b-4a3e-9c29-426c11069802"
expression: snapshot
---
ALTER TABLE embucket.missing_schema.test ADD COLUMN new_col INT
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "queryResultFormat": null,
    "errorCode": "002003",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: Schema 'embucket.missing_schema' does not exist or not authorized",
  "code": "002003"
}
