crates/api-snowflake-rest/src/tests/snapshots/compatible/chained_sqls.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_api.rs
description: "SQL #1 [spent: 548/548ms]: create schema if not exists embucket.test_schema\nQuery UUID: 00000000-0000-0000-0000-000000000000"
expression: snapshot
---
create schema if not exists embucket.test_schema
{
  "data": {
    "rowtype": [
      {
        "name": "count",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": false,
        "type": "fixed",
        "byteLength": null,
        "length": null,
        "scale": 0,
        "precision": 38,
        "collation": null
      }
    ],
    "rowsetBase64": null,
    "rowset": [
      [
        0
      ]
    ],
    "total": 1,
    "returned": 1,
    "queryResultFormat": "json",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
