crates/api-snowflake-rest/src/tests/snapshots/compatible/regression_bug_1662_ambiguous_schema.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_api.rs
description: "SQL #1 [spent: 616/616ms]: select * from \n                ( select 1 as col ) schema1,\n                ( select 2 as col ) schema2\nQuery UUID: 00000000-0000-0000-0000-000000000000"
expression: snapshot
---
select * from 
                ( select 1 as col ) schema1,
                ( select 2 as col ) schema2
{
  "data": {
    "rowtype": [
      {
        "name": "col",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": false,
        "type": "fixed",
        "byteLength": null,
        "length": null,
        "scale": 0,
        "precision": 38,
        "collation": null
      },
      {
        "name": "col",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": false,
        "type": "fixed",
        "byteLength": null,
        "length": null,
        "scale": 0,
        "precision": 38,
        "collation": null
      }
    ],
    "rowsetBase64": null,
    "rowset": [
      [
        1,
        2
      ]
    ],
    "total": 1,
    "returned": 1,
    "queryResultFormat": "json",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
